--- a/app/src/main/res/drawable/symshift.xml
+++ b/app/src/main/res/drawable/symshift.xml
@@ -4,41 +4,27 @@
     android:viewportWidth="32"
     android:viewportHeight="32">
   <path
-      android:pathData="M15.5,6.323L15.5,26.677"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:strokeLineCap="square"/>
-  <path
-      android:pathData="M25.677,16.5L5.323,16.5"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:strokeLineCap="square"/>
-  <path
-      android:pathData="M17.748,2.544L18.593,3.5L17.015,7L13.985,7L12.407,3.5L13.252,2.544L17.748,2.544Z"
-      android:strokeWidth="1"
       android:fillColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:strokeColor="#00000000"/>
+      android:pathData="M12.845,11.788L12.845,8.304L8.901,8.304L16,-0.504 23.099,8.304h-3.944v3.484zM14.16,10.473 L17.84,10.473L17.84,6.99h2.478L16,1.56 11.681,6.99h2.478z"
+      android:strokeAlpha="0.992478"
+      android:strokeWidth="1.25"
+      android:strokeColor="#FFFFFF"/>
   <path
-      android:pathData="M13.252,29.456L12.407,28.5L13.985,25L17.015,25L18.593,28.5L17.748,29.456L13.252,29.456Z"
-      android:strokeWidth="1"
       android:fillColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:strokeColor="#00000000"/>
+      android:pathData="m12.845,20.212v3.484L8.901,23.696L16,32.504 23.099,23.696h-3.944v-3.484zM14.16,21.527 L17.84,21.527v3.484h2.478L16,30.44 11.681,25.01h2.478z"
+      android:strokeAlpha="0.992478"
+      android:strokeWidth="1.25"
+      android:strokeColor="#FFFFFF"/>
   <path
-      android:pathData="M29.456,18.748L28.5,19.593L25,18.015L25,14.985L28.5,13.407L29.456,14.252L29.456,18.748Z"
-      android:strokeWidth="1"
       android:fillColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:strokeColor="#00000000"/>
+      android:pathData="M11.788,19.155L8.304,19.155v3.944L-0.504,16 8.304,8.901L8.304,12.845h3.484zM10.473,17.84 L10.473,14.16L6.99,14.16v-2.478l-5.43,4.319 5.43,4.319v-2.478z"
+      android:strokeAlpha="0.992478"
+      android:strokeWidth="1.25"
+      android:strokeColor="#FFFFFF"/>
   <path
-      android:pathData="M2.544,14.252L3.5,13.407L7,14.985L7,18.015L3.5,19.593L2.544,18.748L2.544,14.252Z"
-      android:strokeWidth="1"
       android:fillColor="#FFFFFF"
-      android:fillType="evenOdd"
-      android:strokeColor="#00000000"/>
+      android:pathData="m20.212,19.155h3.484v3.944l8.808,-7.099 -8.808,-7.099L23.696,12.845h-3.484zM21.527,17.84 L21.527,14.16h3.484v-2.478l5.43,4.319 -5.43,4.319v-2.478z"
+      android:strokeAlpha="0.992478"
+      android:strokeWidth="1.25"
+      android:strokeColor="#FFFFFF"/>
 </vector>
