--- a/app/src/main/res/layout/emoji_picker.xml
+++ b/app/src/main/res/layout/emoji_picker.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="8dp">
 
@@ -15,12 +16,10 @@
             android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_back"
             android:background="@android:color/transparent"
             android:contentDescription="Back"
-            android:paddingTop="12dp"
-            android:paddingStart="4dp"
-            android:paddingEnd="8dp"/>
+            android:padding="8dp"
+            android:src="@drawable/ic_back" />
 
         <EditText
             android:id="@+id/search_bar"
@@ -30,14 +29,8 @@
             android:hint="Search emojis..." />
     </LinearLayout>
 
-    <GridView
-        android:id="@+id/emoji_grid"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/emoji_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:columnWidth="40dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center" />
+        android:layout_height="match_parent" />
 </LinearLayout>
