--- a/app/src/main/res/layout/picker_container.xml
+++ b/app/src/main/res/layout/picker_container.xml
@@ -6,6 +6,7 @@
     android:background="?android:attr/colorBackground">
 
     <LinearLayout
+        android:id="@+id/picker_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -14,12 +15,11 @@
 
         <ImageButton
             android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
             android:contentDescription="Back"
             android:padding="8dp"
-            android:src="@drawable/ic_back" />
+            android:background="@drawable/ic_emoji_btn_left" />
 
         <EditText
             android:id="@+id/search_bar"
@@ -27,10 +27,19 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Search emojis..." />
+
+        <ImageButton
+            android:id="@+id/sym_button"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:contentDescription="Symbols"
+            android:padding="8dp"
+            android:scaleType="fitCenter"
+            android:background="@drawable/ic_sym_btn_right" />
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/emoji_recycler_view"
+    <FrameLayout
+        android:id="@+id/picker_content_area"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
