--- a/app/src/main/res/layout/picker_container.xml
+++ b/app/src/main/res/layout/picker_container.xml
@@ -46,5 +46,16 @@
     <FrameLayout
         android:id="@+id/picker_content_area"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <TextView
+        android:id="@+id/empty_clipboard_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center_vertical"
+        android:text="Clipboard is empty"
+        android:paddingBottom="85dp"
+        />
 </LinearLayout>
