Rename the fork package name and switch the icon.
Changes from here on will be more eink-focused and specific to the
Minimal Phone. The titanpocketkeyboard branch will keep the latest
non-specific changes as of today.

(The existing code branches for the Titan are also untested.)

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -72,6 +72,6 @@
 			/>
 		<Preference
 			android:title="About"
-			app:fragment="io.github.oin.titanpocketkeyboard.SettingsActivity$AboutFragment" />
+			app:fragment="io.github.rickybrent.minimalpocketkeyboard.SettingsActivity$AboutFragment" />
 	</PreferenceCategory>
 </PreferenceScreen>
