--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,102 +2,33 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-  <path
-      android:pathData="M43.61,70.58L44.41,64.41C37.02,64.25 34.52,63.51 34.52,59.73L34.52,48.99L43.88,48.99L43.88,43.31L34.52,43.31L34.52,35.6L27.03,36.29L27.03,43.31L22.24,43.31L21.61,48.99L27.03,48.99L27.03,60.9C27.03,68.08 31.01,70.89 43.61,70.58Z"
-      android:strokeAlpha="0.6018415"
-      android:strokeWidth="1"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:fillAlpha="0.6018415">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:centerX="31.09"
-          android:centerY="50.05"
-          android:gradientRadius="70.93"
-          android:type="radial">
-        <item android:offset="0" android:color="#00000000"/>
-        <item android:offset="1" android:color="#41000000"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M53.01,64.46C52,64.46 51.25,64.3 50.51,63.98C50.46,57.87 50.35,53.25 50.3,49.85C51.41,49.1 52.58,48.68 53.7,48.68C56.73,48.68 58.91,51.39 58.91,57.13C58.91,62.18 56.41,64.46 53.01,64.46ZM50.51,78.92L50.51,70.95C59.39,70.95 66.4,65.26 66.4,55.27C66.4,47.51 62.36,42.56 56.83,42.56C53.96,42.56 51.62,43.94 49.92,45.75L49.6,43.15L42.69,43.52C42.96,48.57 43.01,55.69 43.01,70.47L43.01,79.56L50.51,78.92Z"
-      android:strokeAlpha="0.6018415"
-      android:strokeWidth="1"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:fillAlpha="0.6018415">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:centerX="44.47"
-          android:centerY="68.24"
-          android:gradientRadius="74.65"
-          android:type="radial">
-        <item android:offset="0" android:color="#00000000"/>
-        <item android:offset="1" android:color="#41000000"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M80.31,70.68L88.39,69.73L80.05,55.69C82.76,51.81 85.26,47.67 87.6,43.68L79.84,43.15C77.92,46.92 75.96,50.43 73.67,53.78L71.44,53.83L71.44,32.2L63.89,32.84L63.89,70.2L71.44,70.2L71.44,59.2L73.83,59.09L80.31,70.68Z"
-      android:strokeAlpha="0.6018415"
-      android:strokeWidth="1"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:fillAlpha="0.6018415">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:centerX="65.42"
-          android:centerY="78.72"
-          android:gradientRadius="77.87"
-          android:type="radial">
-        <item android:offset="0" android:color="#00000000"/>
-        <item android:offset="1" android:color="#41000000"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M88.28,75.81l-34.47,0l0,3.75l33.19,0z"
-      android:strokeAlpha="0.6018415"
-      android:strokeWidth="1"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"
-      android:fillAlpha="0.6018415">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:centerX="47.56"
-          android:centerY="77.97"
-          android:gradientRadius="50.69"
-          android:type="radial">
-        <item android:offset="0" android:color="#00000000"/>
-        <item android:offset="1" android:color="#41000000"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:pathData="M43.25,68.61L44.02,62.65C36.88,62.49 34.46,61.77 34.46,58.12L34.46,47.74L43.51,47.74L43.51,42.24L34.46,42.24L34.46,34.79L27.22,35.46L27.22,42.24L22.59,42.24L21.98,47.74L27.22,47.74L27.22,59.25C27.22,66.19 31.07,68.92 43.25,68.61Z"
-      android:strokeWidth="1"
-      android:fillColor="#FFFFFF"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M52.33,62.7C51.36,62.7 50.64,62.54 49.92,62.24C49.87,56.33 49.76,51.85 49.71,48.57C50.79,47.85 51.92,47.44 53,47.44C55.93,47.44 58.04,50.06 58.04,55.61C58.04,60.49 55.62,62.7 52.33,62.7ZM49.92,76.68L49.92,68.97C58.5,68.97 65.28,63.47 65.28,53.81C65.28,46.3 61.38,41.53 56.03,41.53C53.26,41.53 51,42.86 49.35,44.61L49.04,42.09L42.36,42.45C42.62,47.33 42.67,54.22 42.67,68.5L42.67,77.29L49.92,76.68Z"
-      android:strokeWidth="1"
-      android:fillColor="#FFFFFF"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M78.73,68.71L86.54,67.79L78.48,54.22C81.1,50.47 83.51,46.46 85.77,42.6L78.27,42.09C76.42,45.74 74.52,49.13 72.31,52.37L70.15,52.42L70.15,31.5L62.85,32.12L62.85,68.25L70.15,68.25L70.15,57.61L72.46,57.51L78.73,68.71Z"
-      android:strokeWidth="1"
-      android:fillColor="#FFFFFF"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M86.43,73.67l-33.32,0l0,3.63l32.09,0z"
-      android:strokeWidth="1"
-      android:fillColor="#FFFFFF"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
+    android:viewportWidth="64"
+    android:viewportHeight="64">
+  <group android:scaleX="0.5"
+      android:scaleY="0.5"
+      android:translateX="16"
+      android:translateY="16">
+    <path
+        android:pathData="M13.583,1.612L50.417,1.612A11.971,11.971 0,0 1,62.388 13.583L62.388,50.417A11.971,11.971 0,0 1,50.417 62.388L13.583,62.388A11.971,11.971 0,0 1,1.612 50.417L1.612,13.583A11.971,11.971 0,0 1,13.583 1.612z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="3.224"
+        android:fillColor="#ffffff"
+        android:strokeLineCap="round">
+      <aapt:attr name="android:strokeColor">
+        <gradient 
+            android:startX="8.233"
+            android:startY="8.233"
+            android:endX="55.767"
+            android:endY="55.768"
+            android:type="linear">
+          <item android:offset="0.501" android:color="#FFB6B6B6"/>
+          <item android:offset="0.501" android:color="#FF474747"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="m35.081,14.13c-1.901,1.832 -3.763,3.708 -5.628,5.577l1.643,1.643c0.943,-0.938 1.885,-1.876 2.821,-2.821 0,1.762 0.005,4.124 0.007,6.203h2.32c0.001,-2.075 0.002,-4.432 0,-6.195 0.933,0.946 1.869,1.88 2.807,2.821l1.658,-1.658C38.842,17.833 36.992,15.953 35.081,14.13ZM26.937,22.215c-1.867,1.867 -3.747,3.718 -5.57,5.628 1.832,1.901 3.708,3.756 5.577,5.621l1.643,-1.643c-0.94,-0.945 -1.888,-1.883 -2.836,-2.821 1.272,0.001 3.56,-0 5.541,0v-2.32c-2.047,-0 -4.254,-0.001 -5.526,0 0.945,-0.932 1.887,-1.869 2.829,-2.807zM43.066,22.23 L41.422,23.873c0.933,0.938 1.873,1.87 2.814,2.8 -1.315,0 -3.471,-0 -5.519,0v2.327c1.998,-0 4.226,0.001 5.541,0 -0.952,0.937 -1.904,1.872 -2.85,2.814l1.658,1.658c1.867,-1.867 3.754,-3.711 5.577,-5.621 -1.832,-1.901 -3.708,-3.756 -5.577,-5.621zM39.943,35.144c-1.657,2.006 -3.321,3.998 -4.952,6.035 -1.644,-2.021 -3.302,-4.024 -4.966,-6.021l-2.051,2.472 5.606,6.763 -0.007,7.977 2.836,-0.022L36.409,44.393l5.606,-6.755zM21.226,35.159c-1.818,0.006 -3.236,0.525 -4.247,1.549 -1.017,1.03 -1.527,2.182 -1.527,4.021 0,1.472 0.34,1.876 1.018,2.85 0.678,0.956 1.711,1.229 3.098,1.505l1.687,0.327c0.786,0.147 1.342,0.399 1.665,0.749 0.339,0.349 0.509,0.25 0.509,0.931 0,0.828 -0.222,0.976 -0.669,1.418 -0.432,0.441 -1.059,0.458 -1.876,0.458v0.029h-5.432v3.367h5.708v-0.044c1.14,-0.049 2.13,-0.307 2.96,-0.785 0.94,-0.533 1.639,-1.265 2.101,-2.203 0.478,-0.956 0.72,-1.36 0.72,-2.574 0,-1.49 -0.353,-2.076 -1.062,-2.996 -0.709,-0.92 -1.715,-1.178 -3.025,-1.454l-1.694,-0.349c-0.819,-0.169 -2.218,-0.714 -2.218,-1.418 0,-1.509 0.763,-1.996 2.283,-2.014h5.708v-3.367zM43.048,35.159v17.212l2.836,-0.022L45.884,41.725l2.901,3.498 2.96,-3.57v10.718l2.829,-0.022L54.573,35.158L53.061,35.158l-4.276,5.156 -4.283,-5.156zM14.878,49.251 L14.805,49.353c0.024,0.035 0.048,0.067 0.073,0.102z"
+        android:strokeWidth="0.0466264"
+        android:fillColor="#000000"/>
+  </group>
 </vector>
