--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,12 +6,14 @@
 			android:defaultValue="true"
 			android:title="Auto-capitalize"
 			android:summary="Start the first word of a sentence with a capital letter"
+			app:widgetLayout="@layout/settings_widget_eink_switch"
 			/>
 		<SwitchPreference
 			android:key="DotSpace"
 			android:defaultValue="true"
 			android:title="Period with double-space"
 			android:summary="Type two spaces in sequence to create a period"
+			app:widgetLayout="@layout/settings_widget_eink_switch"
 			/>
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Accented characters">
@@ -20,6 +22,8 @@
 			android:defaultValue="true"
 			android:title="Enable"
 			android:summary="Enable accented characters by multipressing (mostly) vowels"
+
+			app:widgetLayout="@layout/settings_widget_eink_switch"
 			/>
 		<ListPreference
 			android:key="FirstLevelTemplate"
@@ -34,6 +38,7 @@
 			android:defaultValue="false"
 			android:title="Only vowels"
 			android:summary="Disable multipress for consonants (like ç or ß)"
+			app:widgetLayout="@layout/settings_widget_eink_switch"
 			/>
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Timing">
