--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MinimalPocketKeyboard" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.EinkKeyboard" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="actionBarStyle">@style/EinkActionBar</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
