Define a method subtype.
Fixes the modifier keys breaking if Minimal Keyboard was the previous
input method.

--- a/app/src/main/res/xml/method.xml
+++ b/app/src/main/res/xml/method.xml
@@ -3,4 +3,7 @@
 <!--    <subtype-->
 <!--		android:imeSubtypeLocale="en_US"-->
 <!--		android:imeSubtypeMode="keyboard" />-->
+    <subtype
+        android:label="Automatic"
+        android:imeSubtypeMode="keyboard" />
 </input-method>
