Add an experimental option to embed the picker view inside the "keyboard" view.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -98,6 +98,11 @@
 			/>
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Other">
+		<SwitchPreferenceCompat
+			app:key="pref_inline_picker"
+			app:title="Use Inline Emoji/Symbol Picker"
+			app:summary="[Experimental] Shows the emoji/picker picker inside the keyboard view instead of a popup."
+			app:defaultValue="false" />
 		<Preference
 			android:key="Reset"
 			android:title="Reset to defaults"
