--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -98,16 +98,13 @@
 			/>
 	</PreferenceCategory>
 	<PreferenceCategory android:title="Other">
-		<SwitchPreferenceCompat
-			app:key="pref_inline_picker"
-			app:title="Use Inline Emoji/Symbol Picker"
-			app:summary="[Experimental] Shows the emoji/picker picker inside the keyboard view instead of a popup."
-			app:defaultValue="false" />
-		<SwitchPreferenceCompat
-			app:key="pref_show_toolbar"
-			app:title="Show Toolbar"
-			app:summary="[Experimental] Show a toolbar with the modifier status."
-			app:defaultValue="false" />
+		<SwitchPreference
+			android:key="pref_show_toolbar"
+			android:defaultValue="false"
+			android:title="Show Toolbar"
+			android:summary="[Experimental] Show a toolbar with the modifier status."
+			app:widgetLayout="@layout/settings_widget_switch" />
+			/>
 		<Preference
 			android:key="Reset"
 			android:title="Reset to defaults"
