--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+	<style name="AlertDialogTheme" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+		<item name="android:background">@android:color/black</item>
+		<item name="android:textColorPrimary">@android:color/white</item>
+		<item name="colorAccent">@android:color/white</item>
+	</style>
 </resources>
