--- a/app/src/main/res/drawable/widget_eink_switch_thumb.xml
+++ b/app/src/main/res/drawable/widget_eink_switch_thumb.xml
@@ -1,14 +1,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="oval">
-            <solid android:color="@android:color/white" />
+            <solid android:color="?attr/colorPrimary" />
             <size android:width="22dp" android:height="22dp" />
-            <stroke android:width="2dp" android:color="@android:color/black" />
+            <stroke android:width="2dp" android:color="?attr/colorOnPrimary" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@android:color/black" />
+            <solid android:color="?attr/colorOnPrimary" />
             <size android:width="22dp" android:height="22dp" />
         </shape>
     </item>
