--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,17 +1,36 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EinkKeyboard" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.EinkKeyboard" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="actionBarStyle">@style/EinkActionBar</item>
+        <item name="preferenceTheme">@style/EinkPreferenceTheme</item>
+        <item name="colorPrimaryDark">@android:color/black</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">#1A1A1A</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">#8b8680</item>
+        <item name="colorSecondaryVariant">#6A6C6E</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/black</item>
         <!-- Customize your theme here. -->
+        <item name="android:colorBackground">@color/black</item>
+    </style>
+
+    <style name="EinkActionBar" parent="Widget.AppCompat.ActionBar">
+        <item name="background">@android:color/black</item>
+        <item name="titleTextStyle">@style/EinkActionBar.TitleTextStyle</item>
+    </style>
+
+    <style name="EinkActionBar.TitleTextStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="EinkPreferenceTheme" parent="@style/PreferenceThemeOverlay.v14.Material">
+        <item name="preferenceCategoryStyle">@style/EinkPreferenceCategoryStyle</item>
     </style>
 	<style name="AlertDialogTheme" parent="Theme.AppCompat.DayNight.Dialog.Alert">
 		<item name="android:background">@android:color/black</item>
