--- a/app/src/main/res/drawable/cyrillic.xml
+++ b/app/src/main/res/drawable/cyrillic.xml
@@ -1,17 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    
-    <!-- Background circle -->
-    <path
-        android:fillColor="#FF5722"
-        android:pathData="M12,12m-10,0a10,10 0,1 1,20 0a10,10 0,1 1,-20 0" />
-    
-    <!-- Cyrillic "Я" character -->
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M7,6 L7,18 L9,18 L9,14 L11,14 L11,18 L13,18 L13,14 L15,14 L15,18 L17,18 L17,6 L15,6 L15,12 L13,12 L13,6 L11,6 L11,12 L9,12 L9,6 Z" />
+  <!-- Cyrillic "Я" character -->
+  <path
+      android:pathData="m12.412,3.846c-1.757,0 -3.177,0.384 -4.21,1.206C7.159,5.874 6.637,7.141 6.637,8.7c-0,0.697 0.12,1.34 0.367,1.922l0.002,0.005 0.002,0.004c0.251,0.563 0.6,1.053 1.04,1.458v0.002l0.002,0.002c0.443,0.399 0.963,0.718 1.55,0.956h0.002v0.002c0.375,0.15 0.8,0.196 1.211,0.271L6.06,20.154h3.154l4.499,-6.601h1.697l0,6.601h2.53l0,-16.308zM12.412,6.127h2.997L15.409,11.272l-2.997,0c-1.071,0 -1.863,-0.224 -2.416,-0.623 -0.524,-0.386 -0.793,-0.979 -0.793,-1.948 0,-0.953 0.268,-1.541 0.795,-1.929l0.002,-0.002h0.002c0.553,-0.413 1.342,-0.643 2.41,-0.643z"
+      android:fillColor="#ffffff"/>
 </vector>
