Added Hungarian to the languages
Added Hungarian to the languages

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,6 +4,7 @@
 		<item>Spanish</item>
 		<item>German</item>
 		<item>Portuguese</item>
+		<item>Hungarian</item>
 		<item>French+ES/DE/PT</item>
 		<item>Danish-Norwegian</item>
 		<item>Swedish-Finnish</item>
@@ -15,6 +16,7 @@
 		<item>es</item>
 		<item>de</item>
 		<item>pt</item>
+		<item>hu</item>
 		<item>fr-ext</item>
 		<item>dk-no</item>
 		<item>se-fi</item>
